--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -21,6 +21,7 @@
       </div>
     </header>
     <div class="gallery"></div>
-    <button type="button" class="load-more is-hidden">Load more</button>
+
+    <button hidden type="button" class="load-more">Load more</button>
   </body>
 </html>
