add smooth scroll and edits

--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -22,6 +22,6 @@
     </header>
     <div class="gallery"></div>
 
-    <button hidden type="button" class="load-more">Load more</button>
+    <button hidden type="button" class="js-loadMore">Load more</button>
   </body>
 </html>
