--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -9,10 +9,11 @@
 }
 
 .photo-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  height: 100%;
+  // justify-content: center;
+  // align-items: center;
   width: 280px;
   border: 1px solid black;
   background-color: #fcffd5;
@@ -21,11 +22,18 @@
 .info {
   text-align: center;
   display: flex;
-  padding: 10px;
+  align-items: end;
+  padding-bottom: 10px;
+  padding-top: 10px;
   gap: 5px;
 }
 
 .load-more {
+  display: block;
   margin-right: auto;
   margin-left: auto;
+}
+
+.info-item {
+  margin: 0;
 }
