--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -7,13 +7,24 @@
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
+  width: 1400px;
   padding: 10px 20px;
 }
 
 .search-form {
-  width: 300px;
-  height: 40px;
+  width: 320px;
+  height: 30px;
   display: block;
   margin: auto;
+}
+
+.search-form__input {
+  width: 250px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.search-form__btn {
+  height: 30px;
+  width: 60px;
 }
