--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,39 +1,50 @@
 .gallery {
-  width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  width: 1400px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  gap: 20px;
 }
 
 .photo-card {
-  // display: flex;
-  // flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  width: 335px;
   height: 100%;
-  // justify-content: center;
-  // align-items: center;
-  width: 280px;
-  border: 1px solid black;
-  background-color: #fcffd5;
+
+  background-color: #f3f6c8;
+}
+
+.image {
+  display: flex;
+  width: inherit;
+  height: 220px;
 }
 
 .info {
-  text-align: center;
   display: flex;
-  align-items: end;
   padding-bottom: 10px;
   padding-top: 10px;
-  gap: 5px;
+  gap: 10px;
+
+  text-align: center;
 }
 
 .load-more {
   display: block;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 10px;
 }
-
+a {
+  text-decoration: none;
+}
 .info-item {
+  color: black;
   margin: 0;
 }
