--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -18,6 +18,7 @@
   height: 100%;
 
   background-color: #f3f6c8;
+  box-shadow: 3px 3px 9px #5b5b5b;
 }
 
 .image {
@@ -30,7 +31,7 @@
   display: flex;
   padding-bottom: 10px;
   padding-top: 10px;
-  gap: 10px;
+  gap: 20px;
 
   text-align: center;
 }
